tests/spec/fail/http_post_non_string_body.aja
import (
    "http"
)

print(http.post("https://example.com", 1))
